# PTZcmd

./: CMakeLists.txt  Control.cpp  Control.h  Player.cpp  Player.h  README.md  Setting.cpp  Setting.h  main.cpp
